--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@ h1{
     margin: 20px 0;
 }
 
+.input-group.error input {
+    border: 2px solid red;
+  }
+
 label{
     font-size: 16px;
     font-weight: normal;
